[package]
name = "challenges"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
_lib = { path = "../_lib" }

# ==============================[ EASY CHALLENGES]==============================

[[bin]]
name = "practical_number"
path = "src/practical_number.rs"

[[bin]]
name = "gcd"
path = "src/gcd.rs"

[[bin]]
name = "minimize_sum"
path = "src/minimize_sum.rs"

[[bin]]
name = "consecutive"
path = "src/consecutive_groups.rs"

[[bin]]
name = "repeat"
path = "src/repeat.rs"

[[bin]]
name = 'two_sum'
path = "src/two_sum.rs"
# =============================[ MEDIUM CHALLENGES]=============================

[[bin]]
name = "m1"
path = "src/m1_matmul.rs"

[[bin]]
name = "m2"
path = "src/m2_linear_regression.rs"

[[bin]]
name = "m3"
path = "src/m3_comprehension.rs"

[[bin]]
name = "m5"
path = "src/m5_reverse_integer.rs"

[[bin]]
name = "m6"
path = "src/m6_median.rs"

#===============================[ PRO CHALLENGES]===============================
