[package]
name = "mid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[[bin]]
name="c1_matmul"
path="src/c1_matmul.rs"

[[bin]]
name="c2_linear_regression"
path="src/c2_linear_regression.rs"

[[bin]]
name="c3_comprehension"
path="src/c3_comprehension.rs"
