[package]
name = "challenges"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
_lib = { path = "../_lib" }

#==============================[ BASIC CHALLENGES]==============================
[[bin]]
name = "fib"
path = "basic/fib.rs"

[[bin]]
name = "practical_number"
path = "basic/practical_number.rs"

[[bin]]
name = "gcd"
path = "basic/gcd.rs"

[[bin]]
name = "minimize_sum"
path = "basic/minimize_sum.rs"

[[bin]]
name = "consecutive"
path = "basic/consecutive_groups.rs"

[[bin]]
name = "repeat"
path = "basic/repeat.rs"

# ==========================[ INTERMEDIATE CHALLENGES]==========================

[[bin]]
name = "c1_matmul"
path = "inter/c1_matmul.rs"

[[bin]]
name = "c2_linear_regression"
path = "inter/c2_linear_regression.rs"

[[bin]]
name = "c3_comprehension"
path = "inter/c3_comprehension.rs"

[[bin]]
name = 'two_sum'
path = "inter/c4_two_sum.rs"

#===============================[ PRO CHALLENGES]===============================
