[package]
name = "challenges"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
_lib = { path = "../_lib" }

# ==============================[ EASY CHALLENGES]==============================
[[bin]]
name = "fib"
path = "easy/fib.rs"

[[bin]]
name = "practical_number"
path = "easy/practical_number.rs"

[[bin]]
name = "gcd"
path = "easy/gcd.rs"

[[bin]]
name = "minimize_sum"
path = "easy/minimize_sum.rs"

[[bin]]
name = "consecutive"
path = "easy/consecutive_groups.rs"

[[bin]]
name = "repeat"
path = "easy/repeat.rs"

[[bin]]
name = 'two_sum'
path = "easy/two_sum.rs"
# =============================[ MEDIUM CHALLENGES]=============================

[[bin]]
name = "c1_matmul"
path = "medium/c1_matmul.rs"

[[bin]]
name = "c2_linear_regression"
path = "medium/c2_linear_regression.rs"

[[bin]]
name = "c3_comprehension"
path = "medium/c3_comprehension.rs"

[[bin]]
name = "m4"
path = "medium/m4_linked_list_add.rs"

[[bin]]
name = "m5"
path = "medium/m5_reverse_integer.rs"

#===============================[ PRO CHALLENGES]===============================
