[package]
name = "data-structures"
version = "0.1.0"
edition = "2021"

[dependencies]


# ==================================[ Arrays ]==================================
[[bin]]
name = "ds001"
path = "src/ds001_find_missing_number.rs"

[[bin]]
name = "ds002"
path = "src/ds002_longest_subarray.rs"

# ===============================[ Linked Lists ]===============================
[[bin]]
name = "ds101"
path = "src/ds101_linked_list_add.rs"

[[bin]]
name = "doubly_linked_list"
path = "src/doubly_linked_list.rs"
# ==================================[ Stacks ]==================================
[[bin]]
name = "stack"
path = "src/stack.rs"
# ==================================[ Queues ]==================================
[[bin]]
name = "queue"
path = "src/queue.rs"
# ===============================[ Binary Tree ]================================
[[bin]]
name = "binary_tree"
path = "src/binary_tree.rs"
