[package]
name = "dsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[[bin]]
name = "bubble_sort"
path = "src/sorting/bubble_sort.rs"

[[bin]]
name = "selection_sort"
path = "src/sorting/selection_sort.rs"

[[bin]]
name = "insertion_sort"
path = "src/sorting/insertion_sort.rs"

[[bin]]
name = "quick_sort"
path = "src/sorting/quick_sort.rs"
