[package]
name = "minimize_sum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
corepkg = {path = "../corepkg"}

[[bin]]
name = "minimize_sum"
path = "src/minimize_sum.rs"

[[bin]]
name = "practical_number"
path = "src/practical_number.rs"

[[bin]]
name = "fib"
path = "src/fib.rs"

[[bin]]
name = "consecutive"
path = "src/consecutive_groups.rs"