[package]
name = "problem_solving"
version = "0.1.0"
edition = "2021"

[dependencies]
_lib = { path = "../_lib" }

# ==============================[ BASIC CHALLENGES]==============================

[[bin]]
name = "practical_number"
path = "basic/practical_number.rs"

[[bin]]
name = "gcd"
path = "basic/gcd.rs"

[[bin]]
name = "reverse_integer"
path = "basic/reverse_integer.rs"

[[bin]]
name = "median"
path = "basic/median.rs"

[[bin]]
name = "linear_regression"
path = "basic/linear_regression.rs"

[[bin]]
name = "comprehension"
path = "basic/comprehension.rs"

[[bin]]
name = "matrix_multiplication"
path = "basic/matrix_multiplication.rs"

# =============================[ MEDIUM CHALLENGES]=============================

[[bin]]
name = "consecutive"
path = "mid/consecutive_groups.rs"

[[bin]]
name = "repeat"
path = "mid/repeat.rs"

[[bin]]
name = "minimize_sum"
path = "mid/minimize_sum.rs"

[[bin]]
name = 'two_sum'
path = "basic/two_sum.rs"

#===============================[ PRO CHALLENGES]===============================
