[package]
name = "problem_solving"
version = "0.1.0"
edition = "2021"

[dependencies]
_lib = { path = "../_lib" }

# ==============================[ BASIC CHALLENGES]==============================

[[bin]]
name = "practical_number"
path = "basic/practical_number.rs"

[[bin]]
name = "gcd"
path = "basic/gcd.rs"

[[bin]]
name = "reverse_integer"
path = "basic/reverse_integer.rs"

[[bin]]
name = "median"
path = "basic/median.rs"

[[bin]]
name = "linear_regression"
path = "basic/linear_regression.rs"

[[bin]]
name = "comprehension"
path = "basic/comprehension.rs"

[[bin]]
name = "matrix_multiplication"
path = "basic/matrix_multiplication.rs"

[[bin]]
name = "color_converter"
path = "basic/color_converter.rs"

# ============================[ Dynamic Programmign]============================

[[bin]]
name = "consecutive"
path = "dp/consecutive_groups.rs"

[[bin]]
name = "repeat"
path = "dp/repeat.rs"

[[bin]]
name = "minimize_sum"
path = "dp/minimize_sum.rs"

[[bin]]
name = 'two_sum'
path = "dp/two_sum.rs"

[[bin]]
name = "fibonacci"
path = "dp/fibonacci.rs"

[[bin]]
name = 'lcs'
path = "dp/longest_common_subsequence.rs"

[[bin]]
name = 'coin_change'
path = 'dp/coin_change.rs'

[[bin]]
name = 'palindrome_partition'
path = 'dp/palindrome_partition.rs'
